tests/query_errors/pp_unrecognized_token/error.txt
Error: 
    1 | use ;
      |     ^ Found the token `;` but expected `<ident>`
    2 |

